# nav2_rosdevday_2021

./: .gitignore  README.md  deps.repos  main.ipynb
demo_ws/src/nav2_rosdevday_2021/: CMakeLists.txt  README.md  package.xml
demo_ws/src/nav2_rosdevday_2021/launch/: system_launch.py
demo_ws/src/nav2_rosdevday_2021/maps/: keepout.yaml  keepout2.yaml  keepout_rotated.pgm  keepout_rotated2.pgm  lanes_rotated.pgm
demo_ws/src/nav2_rosdevday_2021/params/: basic_params.yaml
demo_ws/src/nav2_rosdevday_2021/scripts/: inspection_demo.py  nav_through_poses_demo.py  nav_to_pose_demo.py  picking_demo.py  robot_navigator.py  security_demo.py  waypoint_follower_demo.py
demo_ws/src/nav2_rosdevday_2021/worlds/: industrial_sim.world
nav2_rosdevday_2021/: CMakeLists.txt  package.xml
nav2_rosdevday_2021/launch/: system_launch.py
nav2_rosdevday_2021/maps/: lanes.yaml
nav2_rosdevday_2021/params/: basic_params.yaml
nav2_rosdevday_2021/scripts/: picking_demo.py  robot_navigator.py  waypoint_follower_demo.py
nav2_rosdevday_2021/worlds/: industrial_sim.world
